--- a/src/patch-place-break-core/pom.xml
+++ b/src/patch-place-break-core/pom.xml
@@ -105,11 +105,6 @@
       <artifactId>mysql-connector-j</artifactId>
       <scope>runtime</scope>
     </dependency>
-    <dependency>
-      <groupId>org.mariadb.jdbc</groupId>
-      <artifactId>mariadb-java-client</artifactId>
-      <scope>runtime</scope>
-    </dependency>
 
     <!-- ==================== TEST  ==================== -->
 
@@ -186,6 +181,12 @@
     <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>mariadb</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <!-- MariaDB driver required by Testcontainers -->
+    <dependency>
+      <groupId>org.mariadb.jdbc</groupId>
+      <artifactId>mariadb-java-client</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
