--- a/src/spigot-plugin/pom.xml
+++ b/src/spigot-plugin/pom.xml
@@ -240,15 +240,24 @@
               </includes>
             </relocation>
             <relocation>
+              <pattern>net</pattern>
+              <shadedPattern>${package.lib}.net</shadedPattern>
+              <includes>
+                <include>net.kyori.**</include>
+              </includes>
+            </relocation>
+            <relocation>
               <pattern>org</pattern>
               <shadedPattern>${package.lib}.org</shadedPattern>
               <includes>
+                <include>org.antlr.**</include>
                 <include>org.aopalliance.**</include>
                 <include>org.apache.commons.io.**</include>
                 <include>org.apache.commons.lang3.**</include>
                 <include>org.bstats.**</include>
                 <include>org.checkerframework.**</include>
                 <include>org.flywaydb.**</include>
+                <include>org.jspecify.**</include>
                 <include>org.sqlite.**</include>
                 <include>org.slf4j.**</include>
                 <include>org.spongepowered.configurate.**</include>
