--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,7 +44,7 @@ jobs:
         with:
           node-version: lts/jod
           cache: npm
-          cache-dependency-path: .github/semantic-release/package-lock.json
+          cache-dependency-path: .github/release/package-lock.json
 
       - name: Setup Java
         uses: actions/setup-java@3a4f6e1af504cf6a31855fa899c6aa5355ba6c12 # v4.7.0
@@ -53,12 +53,12 @@ jobs:
           distribution: temurin
 
       - name: Install semantic-release
-        working-directory: .github/semantic-release/
+        working-directory: .github/release/
         run: npm clean-install
 
       - name: Release
         env:
           GITHUB_TOKEN: ${{ github.token }}
           MAVEN_ARGS: --batch-mode -Dstyle.color=always
-        working-directory: .github/semantic-release/
+        working-directory: .github/release/
         run: npx --no-install semantic-release
