--- a/.github/workflows/openssf.yml
+++ b/.github/workflows/openssf.yml
@@ -28,16 +28,14 @@ jobs:
           egress-policy: block
           allowed-endpoints: >
             github.com:443
-            api.github.com:443
+            *.github.com:443
             api.osv.dev:443
             www.bestpractices.dev:443
             api.deps.dev:443
             api.scorecard.dev:443
             repo.maven.apache.org:443
             oss-fuzz-build-logs.storage.googleapis.com:443
-            rekor.sigstore.dev:443
-            fulcio.sigstore.dev:443
-            tuf-repo-cdn.sigstore.dev:443
+            *.sigstore.dev:443
 
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
